[package]
name = "rust-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
headless_chrome = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
anyhow = "1.0"
rss = "2.0"
readability = "0.2"
scraper = "0.18"
urlencoding = "2.1"
rand = "0.8"
chrono = "0.4"
once_cell = "1.21.3"
