[package]
name = "rust-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
headless_chrome = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
anyhow = "1.0"
rss = "2.0"
readability = "0.3.0"
scraper = "0.19.0"
urlencoding = "2.1.3"
rand = "0.8.5"
chrono = { version = "0.4.35", features = ["serde"] }
once_cell = "1.19.0"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
regex = "1.10"
tower-http = { version = "0.5", features = ["fs"] }
redis = { version = "0.24", features = ["tokio-comp"] }
aws-config = "1.0"
aws-sdk-s3 = "1.0"
tokio-cron-scheduler = "0.9"
